# niche-value

./: CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
src/: error.rs  float.rs  int.rs  lib.rs
