[package]
name = "niche-value"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = "MIT OR Apache-2.0"
description = "Numeric types that forbid a chosen value (or NaN / infinity), so Option<T> is niche-optimized. Generalizes nonmax."
keywords = ["nonmax", "nonzero", "niche", "nan", "option"]
categories = ["no-std", "data-structures"]
repository = "https://github.com/xinyandai/niche-value"

[lib]
name = "niche_value"

[dependencies]
serde = { version = "1.0", optional = true, default-features = false }

[dev-dependencies]
bincode = "1.3"

[features]
default = ["std"]
std = []
serde = ["dep:serde"]

[package.metadata.docs.rs]
all-features = true
